# website-monitor

./: .editorconfig  .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  urls.txt
.github/workflows/: python.yml
src/: kafka.py  logging.py  model.py  monitor.py  postgres.py
tests/: test_kafka.py  test_postgres.py
